pdp.css
button {
   cursor: pointer;
}

#pdp {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
}

.pdp-container {
   display: flex;
   justify-content: center;
   align-items: center;
   max-width: 1200px;
}

#product-description {
   font-weight: lighter;
   margin-top: 2rem;
   display: flex;
   flex-direction: column;
   max-width: 900px;
   align-items: center;
   padding: 4em;
   justify-content: center;
   width: 100%;
   margin: auto;
}

#product-name {
   text-transform: uppercase;
   letter-spacing: -2px;
   text-align: center;
   font-size: 2rem;
}

.header-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
}

#product-info {
   max-width: 600px;
   padding: 2rem;
   padding-right: 8rem;
}

.img>img {
   width: 500px;
}

.variant {
   display: none;
}

.variant.enabled {
   display: block;
}

.variant-option {
   display: flex;
   justify-content: space-between;
   background-color: white;

   padding: 1rem .125rem;
   border-bottom: 1px solid lightgrey;
   cursor: pointer;
}

.variant-option.selected {
   background-color: #f1f2f3;
}

.variant-option:last-of-type {
   border: none;
}

.variant-option h5 {
   margin: 0;
   font-size: 1.25rem;
   text-transform: uppercase;
   margin-left: 1rem;
   color: rgb(62, 77, 77);
   margin-top: .5rem;
   font-family: 'Barlow Semi Condensed' !important;
   font-weight: 600;
}

.variant-option span {
   font-size: 1.5rem;
   font-family: 'Barlow Semi Condensed';
   margin-right: 1rem;
}

.variant-id {
   opacity: 0;
}

.retailer-type-and-price {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
}

#atc {
   display: none;
   border: 1px solid black;
   font-weight: bolder;
   text-transform: uppercase;
   cursor: pointer;
   transition: all .2s ease-in-out;
   width: calc(100% - 2rem);
}

#atc:hover {
   background-color: black;
   color: white;
}

#atc-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 2rem;
}


.qty-selector {
   display: none !important;
}

.qty-selector.enabled {
   display: block !important;
}

#qty-selector-container select {
   font-weight: bolder;
   border: 1px solid black;
   background-color: white;
   margin-right: .5rem;
   cursor: pointer;
   width: 80px;
   -webkit-appearance: listbox !important;
   appearance: listbox !important;
   padding: 0.45rem;
}

#size-selector {
   display: none;
   font-weight: bolder;
   border: 1px solid black;
   background-color: white;
   margin-right: .5rem;
   cursor: pointer;
   width: 200px;
   -webkit-appearance: listbox !important;
   appearance: listbox !important;
   padding: 0.45rem;
}

.retailer-delivery-expectation {
   margin: 0;
   margin-left: 1rem;
   text-transform: uppercase;
   color: gray;
   font-size: .85rem;
   margin-top: -.25rem;
}

.lds-roller {
   display: inline-block;
   position: relative;
   width: 80px;
   height: 80px;
}

.lds-roller div {
   animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
   transform-origin: 40px 40px;
}

.lds-roller div:after {
   content: " ";
   display: block;
   position: absolute;
   width: 7px;
   height: 7px;
   border-radius: 50%;
   background: #053752;
   margin: -4px 0 0 -4px;
}

.lds-roller div:nth-child(1) {
   animation-delay: -0.036s;
}

.lds-roller div:nth-child(1):after {
   top: 63px;
   left: 63px;
}

.lds-roller div:nth-child(2) {
   animation-delay: -0.072s;
}

.lds-roller div:nth-child(2):after {
   top: 68px;
   left: 56px;
}

.lds-roller div:nth-child(3) {
   animation-delay: -0.108s;
}

.lds-roller div:nth-child(3):after {
   top: 71px;
   left: 48px;
}

.lds-roller div:nth-child(4) {
   animation-delay: -0.144s;
}

.lds-roller div:nth-child(4):after {
   top: 72px;
   left: 40px;
}

.lds-roller div:nth-child(5) {
   animation-delay: -0.18s;
}

.lds-roller div:nth-child(5):after {
   top: 71px;
   left: 32px;
}

.lds-roller div:nth-child(6) {
   animation-delay: -0.216s;
}

.lds-roller div:nth-child(6):after {
   top: 68px;
   left: 24px;
}

.lds-roller div:nth-child(7) {
   animation-delay: -0.252s;
}

.lds-roller div:nth-child(7):after {
   top: 63px;
   left: 17px;
}

.lds-roller div:nth-child(8) {
   animation-delay: -0.288s;
}

.lds-roller div:nth-child(8):after {
   top: 56px;
   left: 12px;
}

@keyframes lds-roller {
   0% {
      transform: rotate(0deg);
   }

   100% {
      transform: rotate(360deg);
   }
}

#loader {
   z-index: -1;
   position: fixed;
   top: 0;
   right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
   backdrop-filter: brightness(100%) blur(0px);
   transition: all .5s ease-in-out;
   opacity: 0;
}

#loader.active {
   z-index: 9999;
   opacity: 1;
   backdrop-filter: brightness(60%) blur(2px);
}


/* ENGRAVING */


#engraving {
   display: none;
   flex-direction: column;
   align-items: start;
   justify-content: center;
   padding: 1rem;
   margin: 1rem 0;
   background-color: rgba(112, 128, 144, 0.192);
}

#engraving.active {
   display: flex;
}

#engraving input {
   padding: .25rem 1rem;
   border: 1px solid black;
   margin: .25rem;
   border-radius: 0px;
   font-weight: bolder;
}

#engraving input:read-only {
   border: 1px solid transparent;
   background-color: rgba(168, 175, 182, 0.192);
}

#engraving input:read-only:focus {
   outline: none;
}

#engraving input:read-only::placeholder {
   color: rgba(170, 179, 187, 0);
}


#engraving button {
   padding: .25rem 1rem;
   border: 1px solid black;
   margin: .25rem;
   border-radius: 0px;
   background-color: white;
   font-weight: bolder;
   transition: all .2s ease-in-out;
   opacity: 1;
}

#engraving button:disabled {
   opacity: 1;
}

#engraving button:disabled:hover {
   background-color: white;
   color: black;
   cursor: not-allowed;
}

#engraving button:hover {
   background-color: black;
   color: white;
}

.engraving-header {
   display: flex;
   align-items: center;
}

.engraving-body {
   display: flex;
   height: 0px;
   flex-direction: column;
   justify-content: center;
   transition: all .3s ease-in-out;
   overflow: hidden;
   width: 100%;
}

.engraving-body.open {
   display: flex;
   height: auto;
}

.engraving-inputs {
   display: flex;
   flex-direction: column;
}

.engraving-body p {
   padding: .125rem 1rem;
   border: 1px solid black;
   margin: .5rem .25rem;
   text-align: start;
   display: none;
   font-weight: bolder;
   font-size: 14px;
}

.engraving-labels {
   width: 100%;
   flex-direction: column;
}

.visible {
   display: flex !important;
   align-items: center;
   visibility: visible;
   opacity: 1;
   justify-content: center;
}


#product-img-mobile {
   display: none;
}

@media only screen and (max-width: 992px) {
   #product-info {
      padding: 0;
      max-width: 100%;
   }

   #product-description {
      padding: 0;
   }

   #product-img {
      display: none;
   }

   #product-img-mobile {
      display: block;
      width: 100%;
   }

   #atc {
      width: 100%;
      margin-top: 1rem;
   }

   .qty-selector {
      margin-right: 0;
   }
}

